--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@
 
 
 * {
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
@@ -44,13 +44,12 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-
 }
 
 .zuri-container {
     box-sizing: border-box;
     margin: 0;
-    padding: 10px;
+    padding: 0;
     display: block;
     width: 100%;
     height: 600px;
@@ -97,7 +96,7 @@ body {
     justify-content: center;
     width: 100%;
     gap: 20px;
-    margin-top: 60px;
+    margin-top: 69px;
     padding: 20px;
 }
 
@@ -159,7 +158,7 @@ button {
 
 .zuri-container2 {
     width: 100%;
-    height: 800px;
+    height: 900px;
     background-color: var(--white);
     font-family: sans-serif;
 }
@@ -185,46 +184,36 @@ button {
     margin-bottom: 64px;
     line-height: 40px;
     color: var(--dark);
-
 }
 
 .flex-content {
-    margin-right: 15px;
-    margin-left: 15px;
+    padding: 2px;
+    justify-content: center;
     flex-wrap: nowrap;
     display: flex;
-    gap: 30px;
-    height: 400px;
-    /* overflow: hidden; */
-    background-color: #fff;
+    gap: 35px;
+    height: 500px;
+    width: 100%;
+    line-height: 15px;
+    font-family: sans-serif;
+    font-weight: 600;
     background-image: url(dotted-image.png);
 }
 
-.zuri-container3 {
+.zuri-training {
     background-color: var(--pink);
-    padding: 61px 47px 82px 32px; 
+    padding: 35px;
     flex-wrap: wrap;
-    text-align: center;
     font-size: 14px;
+    color: var(--gray);
 }
 
-.zuri-image3 {
-    margin-bottom: 48px;
+.zi {
+    margin-bottom: 20px;
+    margin-left: 2px;
 }
 
-.zuri-content3 {
-    font-size: 18px;
-    font-family: Averta, sans-serif;
-}
-
-.zuri-content3 h3 {
-    margin-bottom: 48px;
-    color: var(--dark);
-    font-size: 16px;
-    font-weight: 800;
-}
-
-.zuri-content3 p {
+.zuri-training p {
     line-height: 24px;
     color: var(--gray);
     font-size: 16px;
@@ -234,36 +223,26 @@ button {
     margin-bottom: 1rem;
 }
 
-.zuri-content3 a {
+.zuri-training a {
     text-decoration: none;
     color: var(--danger);
 }
 
-.zuri-container4 {
+.training {
+    margin-top: 50px;
+    padding-bottom: 50px;
+}
+
+.zuri-internship {
     background-color: var(--pink);
-    padding: 15px;
+    padding: 35px;
+    padding-left: 30px;
     flex-wrap: wrap;
-    text-align: center;
     font-size: 14px;
+    color: var(--gray);
 }
 
-.zuri-image4 {
-    margin-bottom: 48px;
-}
-
-.zuri-content4 {
-    font-size: 18px;
-    font-family: Averta, sans-serif;
-}
-
-.zuri-content4 h3 {
-    margin-bottom: 48px;
-    color: var(--dark);
-    font-size: 16px;
-    font-weight: 800;
-}
-
-.zuri-content4 p {
+.zuri-internship p {
     line-height: 24px;
     color: var(--gray);
     font-size: 16px;
@@ -273,36 +252,21 @@ button {
     margin-bottom: 1rem;
 }
 
-.zuri-content4 a {
+.zuri-internship a {
     text-decoration: none;
     color: var(--danger);
 }
 
-.zuri-container5 {
+.zuri-talent {
     background-color: var(--pink);
-    padding: 15px;
+    padding: 35px;
+    padding-left: 30px;
     flex-wrap: wrap;
-    text-align: center;
     font-size: 14px;
+    color: var(--gray);
 }
 
-.zuri-image5 {
-    margin-bottom: 48px;
-}
-
-.zuri-content5 {
-    font-size: 18px;
-    font-family: Averta, sans-serif;
-}
-
-.zuri-content5 h3 {
-    margin-bottom: 48px;
-    color: var(--dark);
-    font-size: 16px;
-    font-weight: 800;
-}
-
-.zuri-content5 p {
+.zuri-talent p {
     line-height: 24px;
     color: var(--gray);
     font-size: 16px;
@@ -312,7 +276,7 @@ button {
     margin-bottom: 1rem;
 }
 
-.zuri-content5 a {
+.zuri-talent a {
     text-decoration: none;
     color: var(--danger);
 }
@@ -340,13 +304,14 @@ button {
     list-style: none;
     margin: 0;
     padding: 0;
+    color: #dc3545;
 }
 
 .quick-links a {
     text-decoration: none;
     font-size: 14px;
     line-height: 20px;
-    color: #514949;
+    color: #dc3545;
     opacity: 0.9;
 }
 
@@ -377,58 +342,3 @@ footer hr {
     color: #514949;
     padding-bottom: 97px;
 }
-
-@media (max-width: 768px) {
-
-    .zuri-container {
-        height: auto;
-    }
-
-    img.logo-img {
-        display: block;
-        padding-top: 50px;
-        margin: auto;
-        margin-bottom: 20px;
-    }
-
-    .zuri-content1 h2 {
-        font-size: 28px;
-        line-height: 34px;
-        text-align: center;
-    }
-
-    .btns {
-        margin-bottom: 50px;
-    }
-
-
-    button.my-redbtn {
-        display: block;
-        margin: auto;
-        justify-content: center;
-    }
-
-    h3.heading {
-        margin-top: 60px;
-    }
-
-    .footer-flex-container {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .footer-logo {
-        width: 150px;
-        margin-bottom: 15px;
-    }
-
-    .footer-flex-container h3 {
-        font-size: 24px;
-        margin-top: 20px;
-
-    }
-
-
-}
-
