--- a/style.css
+++ b/style.css
@@ -159,7 +159,6 @@ button {
 .zuri-container2 {
     width: 100%;
     height: 900px;
-    background-color: var(--white);
     font-family: sans-serif;
 }
 
@@ -187,7 +186,7 @@ button {
 }
 
 .flex-content {
-    padding: 2px;
+    padding: 0;
     justify-content: center;
     flex-wrap: nowrap;
     display: flex;
@@ -197,7 +196,6 @@ button {
     line-height: 15px;
     font-family: sans-serif;
     font-weight: 600;
-    background-image: url(dotted-image.png);
 }
 
 .zuri-training {
@@ -307,7 +305,7 @@ button {
     color: #dc3545;
 }
 
-.quick-links a {
+.flex-3 a {
     text-decoration: none;
     font-size: 14px;
     line-height: 20px;
@@ -321,6 +319,11 @@ button {
     line-height: 20px;
     color: #514949;
     opacity: 0.9;
+}
+
+.address a{
+    color: #dc3545;
+    text-decoration: none;
 }
 
 .contact-icons img {
